# 07-taotie

./: Cargo.toml  _typos.toml  cliff.toml  learn.md
assets/: sample.parquet  users.ndjson
examples/: arrow_serde.rs  ndjson.rs  pq.rs
notebook/: pyproject.toml  readme.md  taotie.ipynb
notebook/src/notebook/: __init__.py
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs  readme.txt
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
