[package]
name = "taotie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = { version = "52.0.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
datafusion = { version = "39.0.0", features = ["serde"] }
parquet = "52.0.0"
polars = { version = "0.41.3", features = ["parquet", "lazy", "timezones", "polars-sql", "sql"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "macros"] }
